Enviando formulario de contato corrigido

--- a/Front-End/pages/Contato/index.html
+++ b/Front-End/pages/Contato/index.html
@@ -1,147 +1,202 @@
 <!doctype html>
 <html lang="en">
-   <head>
-      <!-- Required meta tags -->
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700,900&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="fonts/icomoon/style.css">
-      <link rel="stylesheet" href="css/owl.carousel.min.css">
-      <!-- Bootstrap CSS -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
-      <!-- Style -->
-      <link rel="stylesheet" href="css/style.css">
-      <!-- CSS -->
-      <link rel="stylesheet" href="../assets/css/style.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-      <title>Contato</title>
-   </head>
-   <body>
-      <!-- Navbar -->
-      <div class="container" id="nav-container">
-         <nav class="navbar navbar-custom navbar-expand-lg navbar-light">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="fonts/icomoon/style.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- Style -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Contato</title>
+</head>
+
+<body>
+
+    <!-- Navbar -->
+
+    <!-- Responsivo-->
+
+    <nav class="navbar navbar-dark navbar-expand-xsm bg-dark fixed-top" id="nav-mobile">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../Home/index.html">
+                <img src="../assets/images/ComLogo-SemImoveis.svg" width="220" height="90">
+            </a>
+            <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end text-bg-light" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                    <a href="../Home/index.html">
+                        <img src="../assets/images/ComLogo-SemImoveis.svg" class="logo-nav">
+                    </a>
+                    <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Home/index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Sobre/index.html">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Servicos/index.html">Serviços</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="../Contato/index.html">Contato<span class="sr-only">(Página
+                                    atual)</span></a>
+                        </li>
+                    </ul>
+
+
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- Fim Responsivo-->
+    <div class="row" id="nav-container">
+        <nav class="navbar navbar-custom navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#">
-            <img src="../assets/images/LOGO.svg" width="260" height="290" class="d-inline-block align-top" alt="">
+                <img src="../assets/images/ComLogo-SemImoveis.svg" width="240" height="90" class="d-inline-block align-top" alt="">
             </a>
             <div class="collapse navbar-collapse justify-content-end" id="nav-layout">
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                  aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
-               <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                  <ul class="navbar-nav">
-                     <li class="nav-item">
-                        <a class="nav-link" href="../Home/index.html">Home<span class="sr-only">(Página
-                        atual)</span></a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="../Sobre/index.html">Sobre</a>
-                     </li>
-                     <li class="nav-item active">
-                        <a class="nav-link" href="../Contato/index.html">Contato</a>
-                     </li>
-                  </ul>
-               </div>
-            </div>
-         </nav>
-      </div>
-      <br>
-      <!-- <hr> -->
-      <div class="content" id="contForm">
-      <div class="container">
-         <div class="row align-items-center">
-            <div class="col-lg-6 mr-auto">
-               <div class="mb-5">
-                  <h3 class="text-white mb-4">Informações de contato</h3>
-                  <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus blanditiis, perferendis aliquam.</p>
-               </div>
-               <div class="row">
-                  <div class="col-md-6">
-                     <ul class="list-unstyled mb-5">
-                        <li class="d-flex text-white mb-2">
-                           <span class="mr-3"><span class="icon-map"></span></span> Edifício central sala 112 setor central do Gama
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Home/index.html">Home</a>
                         </li>
-                        <li class="d-flex text-white mb-2"><span class="mr-3"><span class="icon-phone"></span></span>(61) 99651-1007</li>
-                        <li class="d-flex text-white"><span class="mr-3"><span class="icon-envelope-o"></span></span>coliveira@coliveiraimoveis.com</li>
-                     </ul>
-                  </div>
-               </div>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Sobre/index.html">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Servicos/index.html">Serviços</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="../Contato/index.html">Contato<span class="sr-only">(Página
+                                    atual)</span></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-lg-6">
-               <div class="box">
-                  <h3 class="heading">Envie-nos uma mensagem</h3>
-                  <form class="mb-5" method="post" id="contactForm" name="contactForm">
-                     <div class="row">
-                        <div class="col-md-12 form-group">
-                           <label for="name" class="col-form-label">Nome</label>
-                           <input type="text" class="form-control" name="name" id="name">
+        </nav>
+    </div>
+
+    <!-- Fim Navbar -->
+    <!-- <hr> -->
+    <div class="content" id="contForm">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 mr-auto">
+                    <div class="mb-5">
+                        <h3 class="text-white mb-4">Informações de contato</h3>
+                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus blanditiis, perferendis aliquam.</p>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul class="list-unstyled mb-5">
+                                <li class="d-flex text-white mb-2">
+                                    <span class="mr-3"><span class="icon-map"></span></span> Edifício central sala 112 setor central do Gama
+                                </li>
+                                <li class="d-flex text-white mb-2"><span class="mr-3"><span class="icon-phone"></span></span>(61) 99651-1007</li>
+                                <li class="d-flex text-white"><span class="mr-3"><span class="icon-envelope-o"></span></span>coliveira@coliveiraimoveis.com</li>
+                            </ul>
                         </div>
-                     </div>
-                     <div class="row">
-                        <div class="col-md-12 form-group">
-                           <label for="email" class="col-form-label">Email</label>
-                           <input type="text" class="form-control" name="email" id="email">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="box">
+                        <h3 class="heading">Envie-nos uma mensagem</h3>
+                        <form class="mb-5" method="post" id="contactForm" name="contactForm">
+                            <div class="row">
+                                <div class="col-md-12 form-group">
+                                    <label for="name" class="col-form-label">Nome</label>
+                                    <input type="text" class="form-control" name="name" id="name">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12 form-group">
+                                    <label for="email" class="col-form-label">Email</label>
+                                    <input type="text" class="form-control" name="email" id="email">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-md-12 form-group">
+                                    <label for="message" class="col-form-label">Mensagem</label>
+                                    <textarea class="form-control" name="message" id="message" cols="30" rows="7"></textarea>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <input type="submit" value="Enviar Mensagem" class="btn btn-block btn-primary rounded-0 py-2 px-4">
+                                    <span class="submitting"></span>
+                                </div>
+                            </div>
+                        </form>
+                        <div id="form-message-warning mt-4"></div>
+                        <div id="form-message-success">
+                            Sua mensagem foi enviada, obrigado!
                         </div>
-                     </div>
-                     <div class="row mb-3">
-                        <div class="col-md-12 form-group">
-                           <label for="message" class="col-form-label">Mensagem</label>
-                           <textarea class="form-control" name="message" id="message" cols="30" rows="7"></textarea>
-                        </div>
-                     </div>
-                     <div class="row">
-                        <div class="col-md-12">
-                           <input type="submit" value="Enviar Mensagem" class="btn btn-block btn-primary rounded-0 py-2 px-4">
-                           <span class="submitting"></span>
-                        </div>
-                     </div>
-                  </form>
-                  <div id="form-message-warning mt-4"></div>
-                  <div id="form-message-success">
-                     Sua mensagem foi enviada, obrigado!
-                  </div>
-               </div>
+                    </div>
+                </div>
             </div>
-         </div>
-      </div>
-      <script src="js/jquery-3.3.1.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.min.js"></script>
-      <script src="js/jquery.validate.min.js"></script>
-      <script src="js/main.js"></script>
-      <!--Footer-->
-      <!-- <div class="footer-dark ">
-         <footer>
-             <div class="container ">
-                 <div class="row">
-                     <div class="col-sm-6 col-md-3 item">
-                         <ul>
-                             <li>
-                         <a class="align-top" href="#">
-                             <img src="../assets/images/Logo footer.svg" width="160" height="190" class="d-inline-block align-top" alt="">           
-                         </a>
-                     </li>  
-                           </ul>
-                     </div>
-                     <div class="col-sm-6 col-md-3 item">
-                         <h3>Localização</h3>
-                         <ul>
-                             <p>Edifício central sala 112 setor central do Gama</p>
-                         </ul>
-                     </div>
-                     <div class="col-md-6 item text">
-                         <h3>Sobre nós</h3>
-                         <p>Amet minim mollit non deserunt 
-                             ullamco est sit aliqua dolor do amet
-                             sint. Velit officia consequat duis
-                             enim velit mollit. Exercitation veniam 
-                             consequat sunt nostrud amet.</p>
-                     </div>
-                     <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
-                 </div>
-                 <p class="copyright">C OLIVEIRA empreendimentos imobiliários Ltda © 2022</p>
-             </div>
-         </footer> -->
-   </body>
+        </div>
+
+        <!-- Whatsapp-->
+        <a class="whatsapp-link" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">
+            <i class="icon ion-social-whatsapp" id="whatsapp"></i>
+        </a>
+        <!--Footer-->
+        <div class="footer-dark ">
+            <footer>
+                <div class="container ">
+                    <div class="row" id="footer-items">
+                        <div class="col-sm-6 col-md-3 item">
+                            <ul>
+                                <li>
+                                    <a class="align-top" href="#">
+                                        <img src="../assets/images/ComLogo-SemImoveis-Branca.svg" width="160" height="190" class="d-inline-block align-top" alt="">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6 col-md-3 item">
+                            <h3>Localização</h3>
+                            <ul>
+                                <p>Edifício central sala 112 setor central do Gama</p>
+                            </ul>
+                        </div>
+                        <div class="col-md-6 item text">
+                            <h3>Sobre nós</h3>
+                            <p>A empresa C Oliveira Imoveis que tem como razão social C Oliveira Empreendimentos Imobiliarios Ltda foi fundada em 03/01/2018 e está cadastrada na Solutudo no segmento de Imobiliárias</p>
+                        </div>
+                        <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+                    </div>
+                    <p class="copyright">C OLIVEIRA empreendimentos imobiliários Ltda © 2022</p>
+                </div>
+
+            </footer>
+
+            <script src="js/jquery-3.3.1.min.js"></script>
+            <script src="js/popper.min.js"></script>
+            <script src="js/bootstrap.min.js"></script>
+            <script src="js/jquery.validate.min.js"></script>
+            <script src="js/main.js"></script>
+</body>
+
 </html>
