--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -8,40 +8,71 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- ionicons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css"
-        rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <!-- fim JavaScript -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <!-- Title -->
     <title>Home</title>
 
 </head>
 <!-- Navbar -->
-<div class="container" id="nav-container">
+
+<!-- Responsivo-->
+
+<nav class="navbar navbar-dark navbar-expand-xsm bg-dark fixed-top" id="nav-mobile">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="../Home/index.html">
+            <img src="../assets/images/ComLogo-SemImoveis.svg" width="220" height="90">
+        </a>
+        <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end text-bg-light" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+            <div class="offcanvas-header">
+                <a href="../Home/index.html">
+                    <img src="../assets/images/ComLogo-SemImoveis.svg" class="logo-nav">
+                </a>
+                <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="../Home/index.html">Home<span class="sr-only">(Página
+                                atual)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Sobre/index.html">Sobre</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Sobre/index.html">Serviços</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Contato/index.html">Contato</a>
+                    </li>
+                </ul>
+
+
+            </div>
+        </div>
+    </div>
+</nav>
+<!-- Fim Responsivo-->
+<div class="row" id="nav-container">
     <nav class="navbar navbar-custom navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">
-            <img src="../assets/images/LOGO.svg" width="260" height="290" class="d-inline-block align-top" alt="">
+            <img src="../assets/images/ComLogo-SemImoveis.svg" width="240" height="90" class="d-inline-block align-top" alt="">
         </a>
         <div class="collapse navbar-collapse justify-content-end" id="nav-layout">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -54,6 +85,9 @@
                         <a class="nav-link" href="../Sobre/index.html">Sobre</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="../Servicos/index.html">Serviços</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="../Contato/index.html">Contato</a>
                     </li>
                 </ul>
@@ -61,8 +95,9 @@
         </div>
     </nav>
 </div>
-<hr>
+
 <!-- Fim Navbar -->
+
 
 <!-- Banner -->
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -72,7 +107,7 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     </ol>
-    <div class="carousel-inner">
+    <div class="carousel-inner" id="inner">
         <div class="carousel-item active" id="banner">
             <!--       <img class="d-block w-100" src="..." alt="First slide">-->
         </div>
@@ -96,7 +131,10 @@
     </a>
 </div>
 <!-- Fim Banner -->
-
+<!-- Whatsapp-->
+<a class="whatsapp-link" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">
+    <i class="icon ion-social-whatsapp" id="whatsapp"></i>
+</a>
 <!--Card images-->
 <section class="grid-1">
     <div class="col1"></div>
@@ -108,9 +146,60 @@
 <!-- Nossa Proposta -->
 <div class="proposta">
 
+    <!-- Responsivo -->
+    <div id="carouselmobile" class="carousel slide" data-ride="carousel">
+        <h1>Nossa Proposta</h1>
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner" id="inner1">
+            <div class="carousel-item active" id="active">
+                <div class="col container-card-test1">
+                    <div class="container-cards1">
+                        <div id="card-container-imagem1"><img src="../assets/images/clipboard.svg" class="img_fluid" id="img2">
+                        </div>
+                        <div id="card-container-nome1">
+                            <h2>Compromisso com o cliente</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item" id="itemcarousel">
+                <div class="col container-card-test1">
+                    <div class="container-cards1">
+                        <div id="card-container-imagem1"><img src="../assets/images/lampada-de-ideia.svg" class="img_fluid" id="img2"></div>
+                        <div id="card-container-nome1">
+                            <h2>Idéias inovadoras para a acomodação e satisfação do cliente</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item" id="itemcarousel">
+                <div class="col container-card-test1">
+                    <div class="container-cards1">
+                        <div id="card-container-imagem1"><img src="../assets/images/bolsa-de-dinheiro.svg" class="img_fluid" id="img2"></div>
+                        <div id="card-container-nome1">
+                            <h2>Preço que cabe no bolso</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <!-- Fim Responsivo -->
     <div class="row" id="card-prop">
-
-        <div class="col container-card-test">
+        <div class="col container-card-test" id="teste">
             <div class="container-cards">
                 <div id="card-container-imagem"><img src="../assets/images/clipboard.svg" class="img_fluid" id="img2">
                 </div>
@@ -121,8 +210,7 @@
         </div>
         <div class="col container-card-test">
             <div class="container-cards">
-                <div id="card-container-imagem"><img src="../assets/images/lampada-de-ideia.svg" class="img_fluid"
-                        id="img2"></div>
+                <div id="card-container-imagem"><img src="../assets/images/lampada-de-ideia.svg" class="img_fluid" id="img2"></div>
                 <div id="card-container-nome">
                     <h2>Idéias inovadoras para a acomodação e satisfação do cliente</h2>
                 </div>
@@ -130,8 +218,7 @@
         </div>
         <div class="col container-card-test">
             <div class="container-cards">
-                <div id="card-container-imagem"><img src="../assets/images/bolsa-de-dinheiro.svg" class="img_fluid"
-                        id="img2"></div>
+                <div id="card-container-imagem"><img src="../assets/images/bolsa-de-dinheiro.svg" class="img_fluid" id="img2"></div>
                 <div id="card-container-nome">
                     <h2>Preço que cabe no bolso</h2>
                 </div>
@@ -146,20 +233,19 @@
 
 <div class="container" id="rowMaster">
     <div class="row">
-        <div class="col">
-            <h1 class="text-center">O que Fazemos?</h1>
-            <p>Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui</p><br><br>
-            <p>Ser uma empresa inovadora que oferece diversas opções de imóveis visando sempre atender a necessidade do
+        <h1 class="text-center">O que Fazemos?</h1>
+        <div class="col-6">
+            <p>Somos uma empresa inovadora que oferece diversas opções de imóveis visando sempre atender a necessidade do
                 cliente e inspirar paixão e principalmente satisfação para todos.</p>
         </div>
         <div class="col">
-            <img src="../assets/images/sobre.svg" width="600" height="450" alt="">
+            <img src="../assets/images/sobre.svg" width="600" height="450" id="duvida">
         </div>
     </div>
 </div>
 
 <div class='row' id="fundoAzul1">
-    <h1 class="text-center" id="pfundo">Informações Gerais</h1>
+    <h1 class="text-center" id="pfundo">Nosso Contato</h1>
 
 </div>
 
@@ -198,10 +284,7 @@
                 </div>
                 <h1 class="text-center">Visite-nos</h1>
                 <div class="map">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15339.616150676631!2d-48.0656846!3d-16.0185102!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x340a250cf9255811!2sEdif%C3%ADcio%20Central!5e0!3m2!1spt-BR!2sbr!4v1657755802921!5m2!1spt-BR!2sbr"
-                        width="359" height="344.14" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15339.616150676631!2d-48.0656846!3d-16.0185102!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x340a250cf9255811!2sEdif%C3%ADcio%20Central!5e0!3m2!1spt-BR!2sbr!4v1657755802921!5m2!1spt-BR!2sbr" width="359" height="344.14" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <b>Endereço:</b>
                     <p>Asa Norte -DF Rua ksjaksj Quadra sdokfosdkfsd</p>
                     <b>Telefone:</b>
@@ -218,13 +301,16 @@
 
 
 <div class='row' id="fundoAzul">
-    <div class="container" style="width: 1680px;">
+    <div class="container" id="AzulPes">
         <div class="row justify-content-between" id="row-home">
             <div class="col container-card-test">
                 <img src="../assets/images/quote.svg" alt="aspas" class="card-aspas">
                 <div class="container-cards">
-                    <div id="card-container-imagem"><img src="../assets/images/Gabriel.svg" class="img_fluid" id="img2"></div>
-                    <div id="card-container-nome"><h2>Felipe Scobert</h2></div>
+                    <div id="card-container-imagem"><img src="../assets/images/Gabriel.svg" class="img_fluid" id="img2">
+                    </div>
+                    <div id="card-container-nome">
+                        <h2>Felipe Scobert</h2>
+                    </div>
                 </div>
 
                 <p>Amet minim mollit non deserunt
@@ -237,8 +323,11 @@
             <div class="col container-card-test">
                 <img src="../assets/images/quote.svg" alt="aspas" class="card-aspas">
                 <div class="container-cards">
-                    <div id="card-container-imagem"><img src="../assets/images/Felipe.svg" class="img_fluid" id="img2"></div>
-                    <div id="card-container-nome"><h2>Andre Santado</h2></div>
+                    <div id="card-container-imagem"><img src="../assets/images/Felipe.svg" class="img_fluid" id="img2">
+                    </div>
+                    <div id="card-container-nome">
+                        <h2>Andre Santado</h2>
+                    </div>
                 </div>
 
                 <p>Amet minim mollit non deserunt
@@ -251,8 +340,11 @@
             <div class="col container-card-test">
                 <img src="../assets/images/quote.svg" alt="aspas" class="card-aspas">
                 <div class="container-cards">
-                    <div id="card-container-imagem"><img src="../assets/images/Leticia.svg" class="img_fluid" id="img2"></div>
-                    <div id="card-container-nome"><h2>Vitinha Muller</h2></div>
+                    <div id="card-container-imagem"><img src="../assets/images/Leticia.svg" class="img_fluid" id="img2">
+                    </div>
+                    <div id="card-container-nome">
+                        <h2>Vitinha Muller</h2>
+                    </div>
                 </div>
 
                 <p>Amet minim mollit non deserunt
@@ -273,13 +365,12 @@
 <div class="footer-dark ">
     <footer>
         <div class="container ">
-            <div class="row">
+            <div class="row" id="footer-items">
                 <div class="col-sm-6 col-md-3 item">
                     <ul>
                         <li>
                             <a class="align-top" href="#">
-                                <img src="../assets/images/Logo footer.svg" width="160" height="190"
-                                    class="d-inline-block align-top" alt="">
+                                <img src="../assets/images/ComLogo-SemImoveis-Branca.svg" width="160" height="190" class="d-inline-block align-top" alt="">
                             </a>
                         </li>
                     </ul>
@@ -292,25 +383,20 @@
                 </div>
                 <div class="col-md-6 item text">
                     <h3>Sobre nós</h3>
-                    <p>Amet minim mollit non deserunt
-                        ullamco est sit aliqua dolor do amet
-                        sint. Velit officia consequat duis
-                        enim velit mollit. Exercitation veniam
-                        consequat sunt nostrud amet.</p>
+                    <p>A empresa C Oliveira Imoveis que tem como razão social C Oliveira Empreendimentos Imobiliarios Ltda foi fundada em 03/01/2018 e está cadastrada na Solutudo no segmento de Imobiliárias</p>
                 </div>
-                <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i
-                            class="icon ion-social-linkedin"></i></a><a href="#"><i
-                            class="icon ion-social-instagram"></i></a></div>
+                <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
             </div>
             <p class="copyright">C OLIVEIRA empreendimentos imobiliários Ltda © 2022</p>
         </div>
     </footer>
-    </body>
-
-    <script>
-
-    </script>
+    <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- fim JavaScript -->
     <script xasync defer src="https://maps.googleapis.com/maps/api/js?key=SUA_CHAVE_API_DO_GOOGLE&callback=inicializar">
     </script>
+    </body>
 
 </html>
