--- a/Front-End/pages/Sobre/index.html
+++ b/Front-End/pages/Sobre/index.html
@@ -8,29 +8,92 @@
   <!-- CSS -->
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <!-- JavaScript -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <!-- Title -->
   <title>Sobre</title>
 </head>
 
 <body>
+  <!DOCTYPE html>
+  <html lang="pt-br">
+
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS -->
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- ionicons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Title -->
+    <title>Home</title>
+
+  </head>
   <!-- Navbar -->
-  <div class="container" id="nav-container">
+
+  <!-- Responsivo-->
+
+  <nav class="navbar navbar-dark navbar-expand-xsm bg-dark fixed-top" id="nav-mobile">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../Home/index.html">
+        <img src="../assets/images/ComLogo-SemImoveis.svg" width="220" height="90">
+      </a>
+      <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end text-bg-light" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+        <div class="offcanvas-header">
+          <a href="../Home/index.html">
+            <img src="../assets/images/ComLogo-SemImoveis.svg" class="logo-nav">
+          </a>
+          <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link" href="../Home/index.html">Home</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="../Sobre/index.html">Sobre<span class="sr-only">(Página
+                  atual)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Servicos/index.html">Serviços</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Contato/index.html">Contato</a>
+            </li>
+          </ul>
+
+
+        </div>
+      </div>
+    </div>
+  </nav>
+  <!-- Fim Responsivo-->
+  <div class="row" id="nav-container">
     <nav class="navbar navbar-custom navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#">
-        <img src="../assets/images/LOGO.svg" width="260" height="290" class="d-inline-block align-top" alt="">
+        <img src="../assets/images/ComLogo-SemImoveis.svg" width="240" height="90" class="d-inline-block align-top" alt="">
       </a>
       <div class="collapse navbar-collapse justify-content-end" id="nav-layout">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -39,7 +102,11 @@
               <a class="nav-link" href="../Home/index.html">Home</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="../Sobre/index.html">Sobre<span class="sr-only">(Página atual)</span></a>
+              <a class="nav-link" href="../Sobre/index.html">Sobre<span class="sr-only">(Página
+                  atual)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Servicos/index.html">Serviços</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../Contato/index.html">Contato</a>
@@ -49,11 +116,12 @@
       </div>
     </nav>
   </div>
-  <hr>
+
+  <!-- Fim Navbar -->
   <div class="container">
     <div class="row justify-content-between" id="row1">
 
-      <div class="col-3 col-sm-12 col-md-3">
+      <div class="col-3 col-sm-12 col-md-3" id="vision">
         <h2>Visão</h2>
         <img src="../assets/images/logo visao.svg" class="img_fluid">
       </div>
@@ -73,8 +141,8 @@
         <p>Ser uma empresa inovadora que oferece diversas opções de imóveis visando sempre atender a necessidade do
           cliente e inspirar paixão e principalmente satisfação para todos.</p>
       </div>
-      <div class="col">
-        <img src="../assets/images/Visão.svg" width="590" height="410" alt="">
+      <div class="col" id="colsobre">
+        <img src="../assets/images/Visao.svg" width="590" height="410" alt="">
       </div>
     </div>
     <div class="row" id="row2">
@@ -84,8 +152,8 @@
           e avaliações feitas por engenheiros com o intuito de proporcionar imóveis com muito conforto, bem posicionado
           em áreas comerciais pensando sempre no lazer e na utilidade para o cliente.</p>
       </div>
-      <div class="col">
-        <img src="../assets/images/Missão.svg" width="590" height="410" alt="">
+      <div class="col" id="colsobre">
+        <img src="../assets/images/Missao.svg" width="590" height="410" alt="">
       </div>
     </div>
     <div class="row" id="row2">
@@ -93,23 +161,25 @@
         <h2>Valores</h2>
         <p>Preços competitivos, honestidade, atendimento diferenciado, respeito, dedicação e sustentabilidade.</p>
       </div>
-      <div class="col">
+      <div class="col" id="colsobre">
         <img src="../assets/images/Valores.svg" width="590" height="410" alt="">
       </div>
     </div>
   </div>
-
+  <!-- Whatsapp-->
+  <a class="whatsapp-link" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">
+    <i class="icon ion-social-whatsapp" id="whatsapp"></i>
+  </a>
   <!--Footer-->
   <div class="footer-dark ">
     <footer>
       <div class="container ">
-        <div class="row">
+        <div class="row" id="footer-items">
           <div class="col-sm-6 col-md-3 item">
             <ul>
               <li>
                 <a class="align-top" href="#">
-                  <img src="../assets/images/Logo footer.svg" width="160" height="190" class="d-inline-block align-top"
-                    alt="">
+                  <img src="../assets/images/ComLogo-SemImoveis-Branca.svg" width="160" height="190" class="d-inline-block align-top" alt="">
                 </a>
               </li>
             </ul>
@@ -122,14 +192,9 @@
           </div>
           <div class="col-md-6 item text">
             <h3>Sobre nós</h3>
-            <p>Amet minim mollit non deserunt
-              ullamco est sit aliqua dolor do amet
-              sint. Velit officia consequat duis
-              enim velit mollit. Exercitation veniam
-              consequat sunt nostrud amet.</p>
+            <p>A empresa C Oliveira Imoveis que tem como razão social C Oliveira Empreendimentos Imobiliarios Ltda foi fundada em 03/01/2018 e está cadastrada na Solutudo no segmento de Imobiliárias</p>
           </div>
-          <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i
-                class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+          <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
         </div>
         <p class="copyright">C OLIVEIRA empreendimentos imobiliários Ltda © 2022</p>
       </div>
