--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -313,11 +313,7 @@
                     </div>
                 </div>
 
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis
-                    enim velit mollit. Exercitation veniam
-                    consequat sunt nostrud amet.
+                <p>Profissionais com ampla visão do mercado imobiliário, obtive consultoria,, confiança, orientação e segurança. Recomendo e dou fé no excelente negócio que fiz.
                 </p>
             </div>
             <div class="col container-card-test">
@@ -330,11 +326,7 @@
                     </div>
                 </div>
 
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis
-                    enim velit mollit. Exercitation veniam
-                    consequat sunt nostrud amet.
+                <p>Atendimento de qualidade, com muita responsabilidade no que faz.
                 </p>
             </div>
             <div class="col container-card-test">
@@ -347,11 +339,7 @@
                     </div>
                 </div>
 
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis
-                    enim velit mollit. Exercitation veniam
-                    consequat sunt nostrud amet.
+                <p>Honestidade, requinte e qualidade, fazem com que esta imobiliária tenha um destaque no mercado. Se o assunto é comprar ou vender, eu indico.
                 </p>
             </div>
 
