introducting new functions on page servicos

--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -21,6 +21,7 @@
 
     <!-- Title -->
     <title>C Oliveira Imóveis</title>
+    <link rel="shortcut icon" href="../assets/images/logoicon.ico" type="image/x-icon">
 
 </head>
 <!-- Navbar -->
