--- a/Front-End/pages/Servicos/index.html
+++ b/Front-End/pages/Servicos/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Serviços</title>
+  <link rel="shortcut icon" href="../assets/images/logoicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -29,8 +30,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Title -->
-    <title>Home</title>
+
 
   </head>
   <!-- Navbar -->
@@ -86,15 +86,15 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="../Home/index.html">Home<span class="sr-only">(Página
-                  atual)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="../Home/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../Sobre/index.html">Sobre</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Servicos/index.html">Serviços</a>
+              <a class="nav-link active" href="../Servicos/index.html" style="  height: 76px">Serviços<span class="sr-only">(Página
+                  atual)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../Contato/index.html">Contato</a>
@@ -170,6 +170,12 @@
 
             A lei que cuida dos aluguéis é a
             Lei 8245 de 18 de outubro de 1991.</p>
+          <div class="center">
+            <h2> Alugue seu imóvel com a gente </h2>
+            <a class="" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Whatsapp
+              <i class="icon ion-social-whatsapp" id="whatsappbtn"></i>
+            </a>
+          </div>
         </div>
         <div class="article-img">
           <img src="./images/aluguel 1.svg" alt="aluguel">
@@ -194,6 +200,12 @@
             E, sabendo o que pode gerar uma ação judicial,
             já aconselhamos o cliente a adotar as medidas
             necessárias que possam evitá-la</p>
+          <div class="center">
+            <h2> Alugue seu imóvel com a gente </h2>
+            <a class="" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Whatsapp
+              <i class="icon ion-social-whatsapp" id="whatsappbtn"></i>
+            </a>
+          </div>
         </div>
       </article>
       <a name="inventario"></a>
@@ -214,6 +226,12 @@
             herdeiros não poderão ter propriedade do bem,
             o que significa que não poderão vendê-lo,
             por exemplo. </p>
+          <div class="center">
+            <h2> Faça seu inventário com a gente </h2>
+            <a class="" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Whatsapp
+              <i class="icon ion-social-whatsapp" id="whatsappbtn"></i>
+            </a>
+          </div>
         </div>
         <div class="article-img">
           <img src="./images/inventario 1.svg" alt="">
@@ -244,7 +262,14 @@
             está pronto para ser habitado e foi construído
             ou reformado conforme as exigências legais
             estabelecidas pelo município, especialmente
-            o Código de Obras.</p>
+            o Código de Obras.
+            Somos a melhor consultoria em Habite-se no Distrito Federal.Regularizamos o seu imóvel para venda em tempo hábil</p>
+          <div class="center">
+            <h2> Tire seu "Habite-se" com a gente </h2>
+            <a class="" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Whatsapp
+              <i class="icon ion-social-whatsapp" id="whatsappbtn"></i>
+            </a>
+          </div>
         </div>
       </article>
       <a name="regula"></a>
@@ -263,6 +288,12 @@
             comercializá-lo. Se estiver irregular, não é
             possível registrá-lo no Cartório de
             Registro de Imóveis.</p>
+          <div class="center">
+            <h2>Regularize seus imóveis com a gente </h2>
+            <a class="" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Whatsapp
+              <i class="icon ion-social-whatsapp" id="whatsappbtn"></i>
+            </a>
+          </div>
         </div>
         <div class="article-img">
           <img src="./images/regularizacao 1.svg" alt="">
@@ -287,6 +318,12 @@
             desse documento tão importante. Vale lembrar
             que ele é válido legalmente,
             depois de lavrado em cartório.</p>
+          <div class="center">
+            <h2> Compre seu imóvel com a gente </h2>
+            <a class="" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Whatsapp
+              <i class="icon ion-social-whatsapp" id="whatsappbtn"></i>
+            </a>
+          </div>
         </div>
       </article>
     </section>
