--- a/Front-End/pages/Sobre/index.html
+++ b/Front-End/pages/Sobre/index.html
@@ -17,6 +17,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <!-- Title -->
   <title>Sobre</title>
+  <link rel="shortcut icon" href="../assets/images/logoicon.ico" type="image/x-icon">
 </head>
 
 <body>
