some changes on nav

--- a/Front-End/pages/Contato/index.html
+++ b/Front-End/pages/Contato/index.html
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="../Home/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Sobre/index.html">Sobre</a>
+                            <a class="nav-link" href="../Sobre/index.html">A C Oliveira</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../Servicos/index.html">Serviços</a>
@@ -82,7 +82,7 @@
                             <a class="nav-link" href="../Home/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Sobre/index.html">Sobre</a>
+                            <a class="nav-link" href="../Sobre/index.html">A C Oliveira</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../Servicos/index.html">Serviços</a>
@@ -185,7 +185,7 @@
                             <h3>Sobre nós</h3>
                             <p>A empresa C Oliveira Imoveis que tem como razão social C Oliveira Empreendimentos Imobiliarios Ltda foi fundada em 03/01/2018 e está cadastrada na Solutudo no segmento de Imobiliárias</p>
                         </div>
-                        <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+                        <div class="col item social"><a href="https://www.facebook.com/coliveiraimob/"><i class="icon ion-social-facebook"></i></a><a href=""><i class="icon ion-social-linkedin"></i></a><a href="https://www.instagram.com/coliveiraimob/"><i class="icon ion-social-instagram"></i></a></div>
                     </div>
                     <p class="copyright">C OLIVEIRA empreendimentos imobiliários Ltda © 2022</p>
                 </div>
