--- a/Front-End/pages/Servicos/index.html
+++ b/Front-End/pages/Servicos/index.html
@@ -58,7 +58,7 @@
               <a class="nav-link" href="../Home/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Sobre/index.html">Sobre</a>
+              <a class="nav-link" href="../Sobre/index.html">A C Oliveira</a>
             </li>
             <li class="nav-item  active"">
               <a class=" nav-link" href="../Servicos/index.html">Serviços<span class="sr-only">(Página
@@ -90,7 +90,7 @@
               <a class="nav-link" href="../Home/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Sobre/index.html">Sobre</a>
+              <a class="nav-link" href="../Sobre/index.html">A C Oliveira</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="../Servicos/index.html" style="  height: 76px">Serviços<span class="sr-only">(Página
@@ -169,11 +169,12 @@
             aluguel, contas de luz, testemunhas etc.
 
             A lei que cuida dos aluguéis é a
-            Lei 8245 de 18 de outubro de 1991.</p>
+            Lei 8245 de 18 de outubro de 1991.
+            <br>
+            Traga seu imóvel para locação para a C Oliveira que nós cuidamos de todos os detalhes, e receba o valor do aluguel sempre em dia.
+          </p>
           <div class="center">
-            <h2> Alugue seu imóvel com a gente </h2>
-            <a class="" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Whatsapp
-              <i class="icon ion-social-whatsapp" id="whatsappbtn"></i>
+            <a class="saibamais" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais
             </a>
           </div>
         </div>
@@ -201,9 +202,7 @@
             já aconselhamos o cliente a adotar as medidas
             necessárias que possam evitá-la</p>
           <div class="center">
-            <h2> Alugue seu imóvel com a gente </h2>
-            <a class="" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Whatsapp
-              <i class="icon ion-social-whatsapp" id="whatsappbtn"></i>
+            <a class="saibamais" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais
             </a>
           </div>
         </div>
@@ -225,11 +224,12 @@
             herdeiros. Contudo, sem o procedimento, os
             herdeiros não poderão ter propriedade do bem,
             o que significa que não poderão vendê-lo,
-            por exemplo. </p>
+            por exemplo.
+            <br>
+            Faço seu inventário com a C OLIVEIRA IMÓVEIS, e só pague quando vender o imóvel.
+          </p>
           <div class="center">
-            <h2> Faça seu inventário com a gente </h2>
-            <a class="" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Whatsapp
-              <i class="icon ion-social-whatsapp" id="whatsappbtn"></i>
+            <a class="saibamais" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais
             </a>
           </div>
         </div>
@@ -263,11 +263,11 @@
             ou reformado conforme as exigências legais
             estabelecidas pelo município, especialmente
             o Código de Obras.
-            Somos a melhor consultoria em Habite-se no Distrito Federal.Regularizamos o seu imóvel para venda em tempo hábil</p>
+            <br>
+            Somos a melhor consultoria em Habite-se no Distrito Federal. Regularizamos o seu imóvel para venda em tempo hábil
+          </p>
           <div class="center">
-            <h2> Tire seu "Habite-se" com a gente </h2>
-            <a class="" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Whatsapp
-              <i class="icon ion-social-whatsapp" id="whatsappbtn"></i>
+            <a class="saibamais" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais
             </a>
           </div>
         </div>
@@ -287,11 +287,14 @@
             financiamentos para reformar o imóvel ou
             comercializá-lo. Se estiver irregular, não é
             possível registrá-lo no Cartório de
-            Registro de Imóveis.</p>
+            Registro de Imóveis.
+            <br>
+            O processo para se obter a regularização de um imóvel junto a Prefeitura deve ter sempre a assessoria de um profissional que precisa estar credenciado pela Prefeitura Municipal e pelo CREA - Conselho Regional de Engenharia e Agronomia do Estado
+            <br>
+            Se você que construir, desmembrar ou juntar lotes e também regularizar a sua edificação procure um profissional devidamente registrado no seu órgão de classe e cadastrado na Prefeitura
+          </p>
           <div class="center">
-            <h2>Regularize seus imóveis com a gente </h2>
-            <a class="" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Whatsapp
-              <i class="icon ion-social-whatsapp" id="whatsappbtn"></i>
+            <a class="saibamais" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais
             </a>
           </div>
         </div>
@@ -299,10 +302,10 @@
           <img src="./images/regularizacao 1.svg" alt="">
         </div>
       </article>
+      <a name="venda"></a>
       <article class="article-container">
         <div class="article-img">
           <img src="./images/venda 1.svg" alt="">
-          <a name="venda"></a>
         </div>
         <div class="article-item">
           <h1>Venda de Imóveis</h1>
@@ -317,11 +320,12 @@
             é preciso estar ciente de todas as peculiaridades
             desse documento tão importante. Vale lembrar
             que ele é válido legalmente,
-            depois de lavrado em cartório.</p>
+            depois de lavrado em cartório.
+            <br>
+            Com ajuda de nossos profissionais, será mais fácil escolher um imóvel, negociá-lo e conduzir o fechamento da venda com mais segurança
+          </p>
           <div class="center">
-            <h2> Compre seu imóvel com a gente </h2>
-            <a class="" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Whatsapp
-              <i class="icon ion-social-whatsapp" id="whatsappbtn"></i>
+            <a class="" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais
             </a>
           </div>
         </div>
@@ -359,7 +363,7 @@
             <h3>Sobre nós</h3>
             <p>A empresa C Oliveira Imoveis que tem como razão social C Oliveira Empreendimentos Imobiliarios Ltda foi fundada em 03/01/2018 e está cadastrada na Solutudo no segmento de Imobiliárias</p>
           </div>
-          <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+          <div class="col item social"><a href="https://www.facebook.com/coliveiraimob/"><i class="icon ion-social-facebook"></i></a><a href=""><i class="icon ion-social-linkedin"></i></a><a href="https://www.instagram.com/coliveiraimob/"><i class="icon ion-social-instagram"></i></a></div>
         </div>
         <p class="copyright">C OLIVEIRA empreendimentos imobiliários Ltda © 2022</p>
       </div>
