--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -50,7 +50,7 @@
                                 atual)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../Sobre/index.html">Sobre</a>
+                        <a class="nav-link" href="../Sobre/index.html">A C Oliveira</a>
                     </li>
 
                     <li class="nav-item">
@@ -83,7 +83,7 @@
                                 atual)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../Sobre/index.html">Sobre</a>
+                        <a class="nav-link" href="../Sobre/index.html">A C Oliveira</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../Servicos/index.html">Serviços</a>
@@ -378,10 +378,9 @@
                     <p>A empresa C Oliveira Imoveis que tem como razão social C Oliveira Empreendimentos Imobiliarios
                         Ltda foi fundada em 03/01/2018 e está cadastrada na Solutudo no segmento de Imobiliárias</p>
                 </div>
-                <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+                <div class="col item social"><a href="https://www.facebook.com/coliveiraimob/"><i class="icon ion-social-facebook"></i></a><a href=""><i class="icon ion-social-linkedin"></i></a><a href="https://www.instagram.com/coliveiraimob/"><i class="icon ion-social-instagram"></i></a></div>
+                <p class="copyright">C OLIVEIRA empreendimentos imobiliários Ltda © 2022</p>
             </div>
-            <p class="copyright">C OLIVEIRA empreendimentos imobiliários Ltda © 2022</p>
-        </div>
     </footer>
     <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
