--- a/Front-End/pages/Contato/index.html
+++ b/Front-End/pages/Contato/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Contato</title>
+    <link rel="shortcut icon" href="../assets/images/logoicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -105,7 +106,6 @@
                 <div class="col-lg-6 mr-auto">
                     <div class="mb-5">
                         <h3 class="text-white mb-4">Informações de contato</h3>
-                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus blanditiis, perferendis aliquam.</p>
                     </div>
                     <div class="row">
                         <div class="col-md-6">
@@ -114,7 +114,7 @@
                                     <span class="mr-3"><span class="icon-map"></span></span> Edifício central sala 112 setor central do Gama
                                 </li>
                                 <li class="d-flex text-white mb-2"><span class="mr-3"><span class="icon-phone"></span></span>(61) 99651-1007</li>
-                                <li class="d-flex text-white"><span class="mr-3"><span class="icon-envelope-o"></span></span>coliveira@coliveiraimoveis.com</li>
+                                <li class="d-flex text-white"><span class="mr-3"><span class="icon-envelope-o"></span></span>coliveiraimobiliaria@gmail.com</li>
                             </ul>
                         </div>
                     </div>
