add a new card coursel on the page home

--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -295,6 +295,23 @@
             </aside>
 
         </section>
+        <h3>Cidade jardins</h3>
+        <h4>Valparaíso/GO</h4>
+        <h3>Belle giardino</h3>
+        <br>
+        <h4><span class="linha2">entrada</span>facilitada</h4>
+        <p><span class="material-symbols-outlined">
+                family_restroom
+            </span>Lazer equipado</p>
+        <p><span class="material-symbols-outlined">
+                solar_power
+            </span>Energia Solar Áreas Comuns</p>
+        <p><span class="material-symbols-outlined">
+                door_sliding
+            </span>Elevador</p>
+        <h3 id="flutuante">2 Quartos</h3>
+
+        <a class="slide-btn2" href="#">Saiba Mais</a>
     </div>
     <div class="col-bg">
 
@@ -303,19 +320,29 @@
             <ol class="carousel__viewport">
                 <li id="carousel__slide1-p4" tabindex="0" class="carousel__slide">
                     <div class="carousel__snapper">
+                        <section class="p4">
 
+                            <h1>Breve Lançamento no Gama</h1>
+                            <h3>cadastre-se</h3>
+                            <div class="mrv">
+                                <img src="../assets/images/ComLogo-SemImoveis.svg" alt="">
+                                <img src="../assets/images/mrv-logo-2019.svg" alt="">
+                            </div>
+                        </section>
                     </div>
                 </li>
                 <li id="carousel__slide2-p4" tabindex="0" class="carousel__slide">
                     <div class="carousel__snapper"></div>
 
-                </li>
-                <li id="carousel__slide3-p4" tabindex="0" class="carousel__slide">
-                    <div class="carousel__snapper"></div>
+                    <section class="p4">
 
-                </li>
-                <li id="carousel__slide4-p4" tabindex="0" class="carousel__slide">
-                    <div class="carousel__snapper"></div>
+                        <h1>Breve Lançamento em Águas Claras</h1>
+                        <h3>cadastre-se</h3>
+                        <div class="mrv">
+                            <img src="../assets/images/ComLogo-SemImoveis.svg" alt="">
+                            <img src="../assets/images/mrv-logo-2019.svg" alt="">
+                        </div>
+                    </section>
                 </li>
             </ol>
             <aside class="carousel__navigation">
@@ -325,12 +352,6 @@
                     </li>
                     <li class="carousel__navigation-item">
                         <a href="#carousel__slide2-p4" class="carousel__navigation-button">Go to slide 2</a>
-                    </li>
-                    <li class="carousel__navigation-item">
-                        <a href="#carousel__slide3-p4" class="carousel__navigation-button">Go to slide 3</a>
-                    </li>
-                    <li class="carousel__navigation-item">
-                        <a href="#carousel__slide4-p4" class="carousel__navigation-button">Go to slide 4</a>
                     </li>
                 </ol>
             </aside>
